# scrape_tul

./: Cargo.toml  remove_whitespace.sed
src/: main.rs  types.rs
src/requirements/: bachelor_def.rs  mod.rs
