[package]
name = "scrapperino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16" }
scraper = "0.16.0"
log = "0.4"
simplelog = "0.12.1"
tokio = {version = "1.27",  features=["rt-multi-thread", "macros"]}
thiserror = "1.0"
futures = "0.3.28"
lazy_static = "1.4.0"
